Bug 1956258 - Have default account getter auto-set a viable account. r=BenC,darktrojan

Differential Revision: https://phabricator.services.mozilla.com/D257098